--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         </dependency>
         <dependency>
             <groupId>org.mongodb</groupId>
--            <artifactId>mongodb-driver-sync</artifactId>
+            <artifactId>mongodb-driver-sync</artifactId>
             <version>4.3.1</version>
         </dependency>
         <dependency>
